Pedalbox page - create main pedalbox section - full adaptive.

--- a/dest/pedalbox.html
+++ b/dest/pedalbox.html
@@ -111,7 +111,16 @@
       <section class="section pedalbox" id="pedalbox">
         <div class="section__bg section__bg--dark"></div>
         <div class="c-grid">
-          <div class="pedalbox__wrapper"></div>
+          <div class="pedalbox__wrapper">
+            <div class="pedalbox__row pedalbox__row-0">
+              <div class="pedalbox__row-left"><img src="./img/img-pedalbox.png" srcset="./img/img-pedalbox@2x.png 2x" alt="" title=""></div>
+              <div class="pedalbox__row-right">
+                <h1 class="pedalbox__title">PedalBox</h1>
+                <p class="pedalbox__text">Szybsza reakcja na pedał gazu i sportowa charakterystyka – <span>do 65% szybciej</span>. Zmień odczucia z prowadzenia swojego samochodu na zawsze. <span>Made in Germany</span></p>
+              </div>
+            </div>
+            <div class="pedalbox__row pedalbox__row-1"><a class="pedalbox__btn c-btn" href="#" title="">Poznaj PedalBox</a></div>
+          </div>
         </div>
       </section>
       <!-- PEDALBOX :: END-->
