Pedalbox page - create certificates section - full adaptive.

--- a/dest/pedalbox.html
+++ b/dest/pedalbox.html
@@ -124,6 +124,22 @@
         </div>
       </section>
       <!-- PEDALBOX :: END-->
+      <!-- SECTION CERTIFICATES :: START-->
+      <section class="certificates" id="certificates">
+        <div class="c-grid">
+          <div class="certificates__wrapper">
+            <h2 class="certificates__title">Certyfikaty i członkostwa</h2>
+            <p class="certificates__text">Produkty <span>DTE Systems</span> posiadają certyfikację <span>niemieckiego oraz austryjackiego TÜV</span> przy wsparciu organizacji <span>Dekra</span>, zaś sama firma jest członkiem takich organizacji jak <span>KÜS</span> oraz <span>VDAT</span>.</p>
+            <div class="certificates__img-wrapper">
+              <div class="certificates__img"><img src="./img/img-logo.png" srcset="./img/img-logo@2x.png 2x" alt="" title=""></div>
+              <div class="certificates__img"><img src="./img/img-logo.png" srcset="./img/img-logo@2x.png 2x" alt="" title=""></div>
+              <div class="certificates__img"><img src="./img/img-logo.png" srcset="./img/img-logo@2x.png 2x" alt="" title=""></div>
+              <div class="certificates__img"><img src="./img/img-logo.png" srcset="./img/img-logo@2x.png 2x" alt="" title=""></div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- SECTION CERTIFICATES :: END-->
       <!-- REDUCED :: START-->
       <section class="reduced" id="reduced">
         <div class="reduced__wrapper reduced__wrapper-0">
