Pedalbox page - create installation section - full adaptive.

--- a/dest/pedalbox.html
+++ b/dest/pedalbox.html
@@ -124,6 +124,52 @@
         </div>
       </section>
       <!-- PEDALBOX :: END-->
+      <!-- SECTION INSTALLATION :: START-->
+      <section class="installation" id="installation">
+        <div class="installation__wrapper installation__wrapper-0">
+          <div class="installation__bg"><span></span><span></span><span></span></div>
+          <div class="c-grid">
+            <div class="installation__row">
+              <h2 class="installation__title">Szybka i prosta instalacja</h2>
+              <div class="installation__col">
+                <div class="installation__col-left"><img src="./img/img-Installation.jpg" srcset="./img/img-Installation@2x.jpg 2x" alt="" title=""></div>
+                <div class="installation__col-right">
+                  <ul class="installation__list">
+                    <li class="installation__item">
+                      <div class="installation__item-left"><span class="installation__item-num">1</span></div>
+                      <div class="installation__item-right">
+                        <p class="installation__item-text">Odłącz kostkę pedału gazu. Dostęp do niej w każdym samochodzie jest bardzo łatwy, bo znajduje się ona tuż przy samym pedale.</p>
+                      </div>
+                    </li>
+                    <li class="installation__item">
+                      <div class="installation__item-left"><span class="installation__item-num">2</span></div>
+                      <div class="installation__item-right">
+                        <p class="installation__item-text">Pomiędzy pedał gazu a kostkę pedału wepnij odpowiednie złącza PedalBoxa. Upewnij się, że kostki zatrzasnęły się poprawnie.</p>
+                      </div>
+                    </li>
+                    <li class="installation__item">
+                      <div class="installation__item-left"><span class="installation__item-num">3</span></div>
+                      <div class="installation__item-right">
+                        <p class="installation__item-text">Twój PedalBox jest gotowy do pracy! Wystarczy włączyć pojazd i na początek wybrać tryb Sport na PedalBoxie.</p>
+                      </div>
+                    </li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="installation__wrapper installation__wrapper-1">
+          <div class="c-grid">
+            <div class="installation__video">
+              <div class="installation__video-wrapper">
+                <p>Zobacz video z montażem krok po kroku</p><a href="#" title=""><i class="icon-font icon-play"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- SECTION INSTALLATION :: END-->
       <!-- SECTION CERTIFICATES :: START-->
       <section class="certificates" id="certificates">
         <div class="c-grid">
