--- a/dest/pedalbox.html
+++ b/dest/pedalbox.html
@@ -124,6 +124,158 @@
         </div>
       </section>
       <!-- PEDALBOX :: END-->
+      <!-- SECTION DETAILS :: START-->
+      <section class="details" id="details">
+        <div class="details__row details__row-0">
+          <div class="c-grid">
+            <div class="details__wrapper details__wrapper-0">
+              <div class="details__wrapper-left"><img src="./img/img-details-0.jpg" srcset="./img/img-details-0@2x.jpg 2x" alt="" title=""></div>
+              <div class="details__wrapper-right">
+                <h2 class="details__title">Dla Twojego samochodu</h2>
+                <p class="details__text">PedalBox pasuje do każdego samochodu z elektronicznym pedałem gazu (czyli większość pojazdów wyprodukowanych po 2000 roku), choć nie jest produktem w pełni uniwersalnym.</p>
+                <p class="details__text">W zależności od posiadanego samochodu potrzebny jest inny PedalBox (inne ustawienia oraz okablowanie), dlatego sprawdź, czy mamy produkt dla Twojego pojazdu <span>wypełniając pola poniżej!</span></p>
+                <div class="details__select">
+                  <form class="c-form" action="" method="">
+                    <div class="c-form__group c-form__group--select">
+                      <div class="c-form__group-col c-form__group-col-0">
+                        <div class="c-form__field c-form__field--select">
+                          <div class="c-form__select-wrap">
+                            <select name="" select-js>
+                              <option value="1">Pokażemy Ci co możemy z nim zrobić!</option>
+                              <option value="1">Marka</option>
+                              <option value="1">Marka</option>
+                              <option value="1">Marka</option>
+                              <option value="1">Marka</option>
+                            </select>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="c-form__group-col c-form__group-col-1">
+                        <div class="c-form__field c-form__field--select">
+                          <div class="c-form__select-wrap">
+                            <select name="" select-js>
+                              <option value="1">Pokażemy Ci co możemy z nim zrobić!</option>
+                              <option value="1">Model</option>
+                              <option value="1">Model</option>
+                              <option value="1">Model</option>
+                              <option value="1">Model</option>
+                            </select>
+                          </div>
+                        </div>
+                      </div>
+                      <div class="c-form__group-col c-form__group-col-2">
+                        <div class="c-form__field c-form__field--select">
+                          <div class="c-form__select-wrap">
+                            <select name="" select-js>
+                              <option value="1">Pokażemy Ci co możemy z nim zrobić!</option>
+                              <option value="1">Silnik</option>
+                              <option value="1">Silnik</option>
+                              <option value="1">Silnik</option>
+                              <option value="1">Silnik</option>
+                            </select>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="details__row details__row-1">
+          <div class="c-grid">
+            <div class="details__wrapper details__wrapper-1">
+              <div class="details__wrapper-left">
+                <h2 class="details__title">Gwarantujemy satysfakcję</h2>
+                <p class="details__text">Nasz program <span>Gwarancji Satysfakcji</span> składa się z trzech elementów:</p>
+                <ul class="details__list">
+                  <li class="details__item">
+                    <div class="details__item-left"><span class="details__item-num">1</span></div>
+                    <div class="details__item-right">
+                      <p class="details__item-title">14 dni na przetestowanie PedalBox</p>
+                      <p class="details__item-text">Kupując PedalBox otrzymujesz od nas aż 14 dni na sprawdzenie, czy urządzenie spełnia Twoje oczekiwania.</p>
+                    </div>
+                  </li>
+                  <li class="details__item">
+                    <div class="details__item-left"><span class="details__item-num">2</span></div>
+                    <div class="details__item-right">
+                      <p class="details__item-title">Nie tracisz gwarancji</p>
+                      <p class="details__item-text">Instalacja PedalBoxa nie wpływa w żaden sposób na fabryczną gwarancję pojazdu. Nie ingerujemy również w żadne ustawienia samochodu.</p>
+                    </div>
+                  </li>
+                  <li class="details__item">
+                    <div class="details__item-left"><span class="details__item-num">3</span></div>
+                    <div class="details__item-right">
+                      <p class="details__item-title">Pomoc</p>
+                      <p class="details__item-text">Zarówno przed, jak i po zakupie jesteśmy dla Ciebie dostępni przez cały tydzień. Pomożemy w każdej kwestii, wyjaśnimy każde zagadnienie. Najbardziej cenimy sobie zadowolenie naszych klientów.</p>
+                    </div>
+                  </li>
+                </ul>
+              </div>
+              <div class="details__wrapper-right"><img src="./img/img-details-1.jpg" srcset="./img/img-details-1@2x.jpg 2x" alt="" title=""></div>
+            </div>
+          </div>
+        </div>
+        <div class="details__row details__row-2">
+          <div class="c-grid">
+            <div class="details__wrapper details__wrapper-2">
+              <div class="details__wrapper-left"><img src="./img/img-details-2.jpg" srcset="./img/img-details-2@2x.jpg 2x" alt="" title=""></div>
+              <div class="details__wrapper-right">
+                <h2 class="details__title">A co znajdę w zestawie?</h2>
+                <p class="details__text">W zestawie otrzymujesz:</p>
+                <ul class="details__list">
+                  <li class="details__item">
+                    <div class="details__item-left"><span></span></div>
+                    <div class="details__item-right">
+                      <p class="details__item-text">Urządzenie PedalBox</p>
+                    </div>
+                  </li>
+                  <li class="details__item">
+                    <div class="details__item-left"><span></span></div>
+                    <div class="details__item-right">
+                      <p class="details__item-text">Okablowanie zgodne ze wszystkimi normami producentów</p>
+                    </div>
+                  </li>
+                  <li class="details__item">
+                    <div class="details__item-left"><span></span></div>
+                    <div class="details__item-right">
+                      <p class="details__item-text">Instrukcję instalacji w pojeździe</p>
+                    </div>
+                  </li>
+                  <li class="details__item">
+                    <div class="details__item-left"><span></span></div>
+                    <div class="details__item-right">
+                      <p class="details__item-text">Uchwyt do deski rozdzielczej</p>
+                    </div>
+                  </li>
+                  <li class="details__item">
+                    <div class="details__item-left"><span></span></div>
+                    <div class="details__item-right">
+                      <p class="details__item-text">Ściereczki do wyczyszczenia deski rozdzielczej</p>
+                    </div>
+                  </li>
+                  <li class="details__item">
+                    <div class="details__item-left"><span></span></div>
+                    <div class="details__item-right">
+                      <p class="details__item-text">Rzepy do przyklejenia PedalBoxa lub jego uchwytu</p>
+                    </div>
+                  </li>
+                  <li class="details__item">
+                    <div class="details__item-left"><span></span></div>
+                    <div class="details__item-right">
+                      <p class="details__item-text">2 letnią gwarancję na PedalBo</p>
+                    </div>
+                  </li>
+                </ul><a class="details__btn" href="#" title="">
+                  <div><span><i class="icon-font icon-play"></i></span></div>
+                  <div><span>Zobacz unboxing Pedalbox</span></div></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- SECTION DETAILS :: END-->
       <!-- SECTION INSTALLATION :: START-->
       <section class="installation" id="installation">
         <div class="installation__wrapper installation__wrapper-0">
