Pedalbox page - create application section - full adaptive.

--- a/dest/pedalbox.html
+++ b/dest/pedalbox.html
@@ -124,6 +124,61 @@
         </div>
       </section>
       <!-- PEDALBOX :: END-->
+      <!-- SECTION APPLICATION :: START-->
+      <section class="application" id="application">
+        <div class="application__wrapper">
+          <div class="application__bg"><span></span><span></span><span></span></div>
+          <div class="c-grid">
+            <div class="application__row">
+              <div class="application__row-left">
+                <div class="application__mobile">
+                  <h2 class="application__title">Aplikacja Pedalbox</h2>
+                  <p class="application__subtitle">Dostępna tylko dla Pedalbox+</p>
+                </div><img src="./img/img-phone-application.png" srcset="./img/img-phone-application@2x.png 2x" alt="" title="">
+              </div>
+              <div class="application__row-right">
+                <h2 class="application__title">Aplikacja Pedalbox</h2>
+                <p class="application__subtitle">Dostępna tylko dla Pedalbox+</p>
+                <div class="application__block">
+                  <div class="product__box-footer">
+                    <ul>
+                      <li>
+                        <div><img src="./img/img-product-list.png" srcset="./img/img-product-list@2x.png 2x" alt="" title=""></div>
+                        <div>
+                          <h3>Kontrola Pedalbox przez appkę</h3>
+                          <p>Programy Sport, Sport Plus oraz City.</p><span>Dodatkowo czwarty program to program seryjny.</span>
+                        </div>
+                      </li>
+                      <li>
+                        <div><img src="./img/img-product-list.png" srcset="./img/img-product-list@2x.png 2x" alt="" title=""></div>
+                        <div>
+                          <h3>Możliwość dopasowania programu</h3>
+                          <p>Programy Sport, Sport Plus oraz City.</p><span>Dodatkowo czwarty program to program seryjny.</span>
+                        </div>
+                      </li>
+                      <li>
+                        <div><img src="./img/img-product-list.png" srcset="./img/img-product-list@2x.png 2x" alt="" title=""></div>
+                        <div>
+                          <h3>Zawsze aktualne oprogramowanie</h3>
+                          <p>Programy Sport, Sport Plus oraz City.</p><span>Dodatkowo czwarty program to program seryjny.</span>
+                        </div>
+                      </li>
+                      <li>
+                        <div><img src="./img/img-product-list.png" srcset="./img/img-product-list@2x.png 2x" alt="" title=""></div>
+                        <div>
+                          <h3>Ponad 20 ustawień</h3>
+                          <p>Programy Sport, Sport Plus oraz City.</p><span>Dodatkowo czwarty program to program seryjny.</span>
+                        </div>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- SECTION APPLICATION :: END-->
       <!-- SECTION DETAILS :: START-->
       <section class="details" id="details">
         <div class="details__row details__row-0">
