Pedalbox page - create item section - full adaptive.

--- a/dest/pedalbox.html
+++ b/dest/pedalbox.html
@@ -124,6 +124,124 @@
         </div>
       </section>
       <!-- PEDALBOX :: END-->
+      <!-- SECTION ITEM :: START-->
+      <section class="item" id="item">
+        <div class="c-grid">
+          <div class="item__wrapper">
+            <h2 class="item__title">Dwie wersje produktu</h2>
+            <div class="item__row item__row-0">
+              <div class="item__row-left">
+                <div class="item__mobile">
+                  <p class="item__subtitle">Pedalbox</p>
+                </div><img src="./img/img-item-0.png" srcset="./img/img-item-0@2x.png 2x" alt="" title="">
+              </div>
+              <div class="item__row-right">
+                <p class="item__subtitle">Pedalbox</p>
+                <div class="item__block">
+                  <div class="product__box-footer">
+                    <ul>
+                      <li>
+                        <div><img src="./img/img-item-2.png" srcset="./img/img-item-2@2x.png 2x" alt="" title=""></div>
+                        <div>
+                          <h3>Bez utraty gwarancji</h3>
+                          <p>Programy Sport, Sport Plus oraz City.</p><span>Dodatkowo czwarty program to program seryjny.</span>
+                        </div>
+                      </li>
+                      <li>
+                        <div><img src="./img/img-product-list.png" srcset="./img/img-product-list@2x.png 2x" alt="" title=""></div>
+                        <div>
+                          <h3>4 programy do wyboru</h3>
+                          <p>Programy Sport, Sport Plus oraz City.</p><span>Dodatkowo czwarty program to program seryjny.</span>
+                        </div>
+                      </li>
+                      <li class="item__block--wm">
+                        <div><img src="./img/img-product-list.png" srcset="./img/img-product-list@2x.png 2x" alt="" title=""></div>
+                        <div>
+                          <h3>Ponad 20 ustawień</h3>
+                          <p>Programy Sport, Sport Plus oraz City.</p><span>Dodatkowo czwarty program to program seryjny.</span>
+                        </div>
+                      </li>
+                      <li class="item__block--wm">
+                        <div><img src="./img/img-product-list.png" srcset="./img/img-product-list@2x.png 2x" alt="" title=""></div>
+                        <div>
+                          <h3>Funkcja pamięci</h3>
+                          <p>Programy Sport, Sport Plus oraz City.</p><span>Dodatkowo czwarty program to program seryjny.</span>
+                        </div>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="item__row item__row-1">
+              <div class="item__row-left">
+                <div class="item__mobile">
+                  <p class="item__subtitle">Pedalbox<span>+</span></p>
+                </div><img src="./img/img-item-1.png" srcset="./img/img-item-1@2x.png 2x" alt="" title="">
+              </div>
+              <div class="item__row-right">
+                <p class="item__subtitle">Pedalbox<span>+</span></p>
+                <div class="item__block">
+                  <div class="product__box-footer">
+                    <ul>
+                      <li>
+                        <div><img src="./img/img-item-2.png" srcset="./img/img-item-2@2x.png 2x" alt="" title=""></div>
+                        <div>
+                          <h3>Bez utraty gwarancji</h3>
+                          <p>Programy Sport, Sport Plus oraz City.</p><span>Dodatkowo czwarty program to program seryjny.</span>
+                        </div>
+                      </li>
+                      <li>
+                        <div><img src="./img/img-product-list.png" srcset="./img/img-product-list@2x.png 2x" alt="" title=""></div>
+                        <div>
+                          <h3>4 programy do wyboru</h3>
+                          <p>Programy Sport, Sport Plus oraz City.</p><span>Dodatkowo czwarty program to program seryjny.</span>
+                        </div>
+                      </li>
+                      <li>
+                        <div><img src="./img/img-product-list.png" srcset="./img/img-product-list@2x.png 2x" alt="" title=""></div>
+                        <div>
+                          <h3>Ponad 20 ustawień</h3>
+                          <p>Programy Sport, Sport Plus oraz City.</p><span>Dodatkowo czwarty program to program seryjny.</span>
+                        </div>
+                      </li>
+                      <li>
+                        <div><img src="./img/img-product-list.png" srcset="./img/img-product-list@2x.png 2x" alt="" title=""></div>
+                        <div>
+                          <h3>Funkcja pamięci</h3>
+                          <p>Programy Sport, Sport Plus oraz City.</p><span>Dodatkowo czwarty program to program seryjny.</span>
+                        </div>
+                      </li>
+                      <li class="item__block--plus">
+                        <div><img src="./img/img-product-list.png" srcset="./img/img-product-list@2x.png 2x" alt="" title=""></div>
+                        <div>
+                          <h3>PerfecTune</h3>
+                          <p>Programy Sport, Sport Plus oraz City.</p><span>Dodatkowo czwarty program to program seryjny.</span>
+                        </div>
+                      </li>
+                      <li class="item__block--plus">
+                        <div><img src="./img/img-product-list.png" srcset="./img/img-product-list@2x.png 2x" alt="" title=""></div>
+                        <div>
+                          <h3>Nowy wygląd</h3>
+                          <p>Programy Sport, Sport Plus oraz City.</p><span>Dodatkowo czwarty program to program seryjny.</span>
+                        </div>
+                      </li>
+                      <li class="item__block--wm item__block--plus">
+                        <div><img src="./img/img-product-list.png" srcset="./img/img-product-list@2x.png 2x" alt="" title=""></div>
+                        <div>
+                          <h3>Większa precyzja</h3>
+                          <p>Programy Sport, Sport Plus oraz City.</p><span>Dodatkowo czwarty program to program seryjny.</span>
+                        </div>
+                      </li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- SECTION ITEM :: END-->
       <!-- SECTION APPLICATION :: START-->
       <section class="application" id="application">
         <div class="application__wrapper">
