Pedalbox page - create working section - full adaptive.

--- a/dest/pedalbox.html
+++ b/dest/pedalbox.html
@@ -124,6 +124,87 @@
         </div>
       </section>
       <!-- PEDALBOX :: END-->
+      <!-- SECTION WORKING :: START-->
+      <section class="working" id="working">
+        <div class="working__wrapper working__wrapper-0">
+          <div class="working__bg"><span></span><span></span><span></span></div>
+          <div class="c-grid">
+            <h2 class="working__title">Jak to działa?</h2>
+            <p class="working__text"><span>PedalBox</span> zmienia dwie rzeczy. <i></i>Po pierwsze sygnał pedału gazu jest znacznie częściej przekazywany do komputera sterującego silnikiem. <i></i>Po drugie zmieniona jest charakterystyka pedału w zależności od wybranego <span>programu.</span></p>
+            <div class="working__col">
+              <div class="working__col-left">
+                <p class="working__subtitle">Rodzaje programów</p>
+                <div class="working__mobile">
+                  <div class="working__box">
+                    <p class="working__box-title">Sport+<span>(zmienia kolor diody na kolor czerwony)</span></p>
+                    <p class="working__box-description">Tryb najbardziej sportowy, który pozwala poszaleć samochodem, wykorzystując wszystkie jego walory. Najszybszy start samochodu ze świateł.</p>
+                    <div class="swiper-container swiper-container--working">
+                      <div class="swiper-wrapper">
+                                            <div class="swiper-slide"><img src="./img/img-pedalbox-slider.png" srcset="./img/img-pedalbox-slider@2x.png 2x" alt="" title=""></div>
+                                            <div class="swiper-slide"><img src="./img/img-pedalbox-slider.png" srcset="./img/img-pedalbox-slider@2x.png 2x" alt="" title=""></div>
+                                            <div class="swiper-slide"><img src="./img/img-pedalbox-slider.png" srcset="./img/img-pedalbox-slider@2x.png 2x" alt="" title=""></div>
+                      </div>
+                      <div class="swiper-pagination"></div>
+                      <div class="swiper-button-prev"></div>
+                      <div class="swiper-button-next"></div>
+                    </div>
+                  </div>
+                </div>
+                <div class="working__box"><img class="working__box-img" src="./img/img-item-working.png" srcset="./img/img-item-working@2x.png 2x" alt="" title="">
+                  <p class="working__box-title">Sport+ <span>(zmienia kolor diody na kolor czerwony)</span></p>
+                  <p class="working__box-subtitle">Sport</p>
+                  <p class="working__box-subtitle">City</p>
+                  <p class="working__box-subtitle working__box-subtitle--pb">Off</p>
+                  <p class="working__box-description">Tryb najbardziej sportowy, który pozwala poszaleć samochodem, wykorzystując wszystkie jego walory. Najszybszy start samochodu ze świateł.</p>
+                  <div class="working__block working__block-0">
+                    <div class="working__block-left"><span>+</span></div>
+                    <div class="working__block-middle">
+                      <p>Użyj symbolu plusa, żeby zwiększyć czułość modułu</p><span>3 stopnie zwiększonej czułości, wyświetlane na czerwono</span>
+                    </div>
+                    <div class="working__block-right"><img src="./img/img-level-plus.png" srcset="./img/img-level-plus@2x.png 2x" alt="" title=""></div>
+                  </div>
+                  <div class="working__block working__block-1">
+                    <div class="working__block-left"><span>-</span></div>
+                    <div class="working__block-middle">
+                      <p>Użyj symbolu minusa, żeby zmniejszyć czułość modułu</p><span>3 stopnie zmniejszonej czułości, wyświetlane na zielono</span>
+                    </div>
+                    <div class="working__block-right"><img src="./img/img-level-minus.png" srcset="./img/img-level-minus@2x.png 2x" alt="" title=""></div>
+                  </div>
+                </div>
+              </div>
+              <div class="working__col-right"><img src="./img/img-graph-working.png" srcset="./img/img-graph-working@2x.png 2x" alt="" title="">
+                <p><span>Oś pionowa</span> to otwarcie przepustnicy, zaś <span>oś pozioma</span> pokazuje, <br>jak mocno wciśnięty jest pedał gazu.</p>
+                <div class="working__mobile">
+                  <div class="working__block working__block-0">
+                    <div class="working__block-left"><span>+</span></div>
+                    <div class="working__block-middle">
+                      <p>Użyj symbolu plusa, żeby zwiększyć czułość modułu</p><span>3 stopnie zwiększonej czułości, wyświetlane na czerwono</span>
+                    </div>
+                    <div class="working__block-right"><img src="./img/img-level-plus.png" srcset="./img/img-level-plus@2x.png 2x" alt="" title=""></div>
+                  </div>
+                  <div class="working__block working__block-1">
+                    <div class="working__block-left"><span>-</span></div>
+                    <div class="working__block-middle">
+                      <p>Użyj symbolu minusa, żeby zmniejszyć czułość modułu</p><span>3 stopnie zmniejszonej czułości, wyświetlane na zielono</span>
+                    </div>
+                    <div class="working__block-right"><img src="./img/img-level-minus.png" srcset="./img/img-level-minus@2x.png 2x" alt="" title=""></div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="working__wrapper working__wrapper-1">
+          <div class="c-grid">
+            <div class="working__video">
+              <div class="working__video-wrapper">
+                <p>Zobacz video z montażem krok po kroku</p><a href="#" title=""><i class="icon-font icon-play"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- SECTION WORKING :: END-->
       <!-- SECTION ITEM :: START-->
       <section class="item" id="item">
         <div class="c-grid">
