--- a/dest/404.html
+++ b/dest/404.html
@@ -54,7 +54,7 @@
             </div>
             <nav class="nav nav--header">
               <ul class="nav__list">
-                <li class="nav__item nav__item-0 nav__item-icon-nav-0"><a class="nav__link is-active nav__link-0" href="#" title="" navdrop-js="">
+                <li class="nav__item nav__item-0 nav__item-icon-nav-0"><a class="nav__link nav__link-0" href="#" title="" navdrop-js="">
                     <div class="nav__link-icon"><i class="icon-png icon-nav-0"></i></div><span class="nav__link-text">Podnoszenie mocy</span></a>
                 </li>
                 <li class="nav__item nav__item-1 nav__item-icon-nav-0"><a class="nav__link nav__link-1" href="#" title="" navdrop-js="">
