Pedalbox page - edits v0.1.

--- a/dest/pedalbox.html
+++ b/dest/pedalbox.html
@@ -119,7 +119,7 @@
                 <p class="pedalbox__text">Szybsza reakcja na pedał gazu i sportowa charakterystyka – <span>do 65% szybciej</span>. Zmień odczucia z prowadzenia swojego samochodu na zawsze. <span>Made in Germany</span></p>
               </div>
             </div>
-            <div class="pedalbox__row pedalbox__row-1"><a class="pedalbox__btn c-btn" href="#" title="">Poznaj PedalBox</a></div>
+            <div class="pedalbox__row pedalbox__row-1"><a class="pedalbox__btn c-btn" href="#working" title="" anchor-js>Poznaj PedalBox</a></div>
           </div>
         </div>
       </section>
