Basket page - edits v0.1.

--- a/dest/basket.html
+++ b/dest/basket.html
@@ -501,9 +501,9 @@
                         <div><img src="./img/img-paypal.png" srcset="./img/img-paypal@2x.png 2x" alt="" title=""></div>
                         <p>PayPal</p></a><a class="basket__delivery-box" href="#" title="">
                         <div><img src="./img/img-przelewy24.png" srcset="./img/img-przelewy24@2x.png 2x" alt="" title=""></div>
-                        <p>Przelewy24</p></a><a class="basket__delivery-box" href="#" title="">
+                        <p>Przelewy24</p></a><a class="basket__delivery-box basket__delivery-box--card" href="#" title="">
                         <div><img src="./img/img-płatnicza.png" srcset="./img/img-płatnicza@2x.png 2x" alt="" title=""></div>
-                        <p>Karta płatnicza</p></a><a class="basket__delivery-box" href="#" title="">
+                        <p>Karta płatnicza</p></a><a class="basket__delivery-box basket__delivery-box--money" href="#" title="">
                         <div><img src="./img/img-gotówka.png" srcset="./img/img-gotówka@2x.png 2x" alt="" title=""></div>
                         <p>Gotówka</p></a></div>
                   </div>
