Pedalbox - create working animation - w\ mobile.

--- a/dest/pedalbox.html
+++ b/dest/pedalbox.html
@@ -150,11 +150,8 @@
                     </div>
                   </div>
                 </div>
-                <div class="working__box"><img class="working__box-img" src="./img/img-item-working.png" srcset="./img/img-item-working@2x.png 2x" alt="" title="">
-                  <p class="working__box-title">Sport+ <span>(zmienia kolor diody na kolor czerwony)</span></p>
-                  <p class="working__box-subtitle">Sport</p>
-                  <p class="working__box-subtitle">City</p>
-                  <p class="working__box-subtitle working__box-subtitle--pb">Off</p>
+                <div class="working__box"><img class="working__box-img" src="./img/img-item-working.png" alt="" title=""><img class="working__box-img working__box-img--0" working-image-js data-img="0" src="./img/img-item-working-0.png" alt="" title=""><img class="working__box-img working__box-img--1" working-image-js data-img="1" src="./img/img-item-working-1.png" alt="" title=""><img class="working__box-img working__box-img--2" working-image-js data-img="2" src="./img/img-item-working-2.png" alt="" title="">
+                  <div class="working__box-title" working-title-js data-num="0" data-name="Sport+" data-desc="(zmienia kolor diody na kolor czerwony)"><span working-btnName-js>Sport+</span> <span class='working__box-title--desc' working-btnDesc-js>(zmienia kolor diody na kolor czerwony)</span></div><a class="working__box-subtitle" href="#" working-btn-js data-num="1" data-name="Sport" data-desc="(zmienia kolor diody na kolor pomarańczowy)">Sport</a><a class="working__box-subtitle working__box-subtitle" href="#" working-btn-js data-num="2" data-name="City" data-desc="(zmienia kolor diody na kolor zielony)">City</a><a class="working__box-subtitle working__box-subtitle--pb" href="#" working-btn-js data-num="3" data-name="Off" data-desc="(wyłącza diodę)">Off</a>
                   <p class="working__box-description">Tryb najbardziej sportowy, który pozwala poszaleć samochodem, wykorzystując wszystkie jego walory. Najszybszy start samochodu ze świateł.</p>
                   <div class="working__block working__block-0">
                     <div class="working__block-left"><span>+</span></div>
@@ -172,7 +169,8 @@
                   </div>
                 </div>
               </div>
-              <div class="working__col-right"><img src="./img/img-graph-working.png" srcset="./img/img-graph-working@2x.png 2x" alt="" title="">
+              <div class="working__col-right">
+                <div class="working__graph"><img class="working__graph-img" src="./img/img-graph-working.png" alt="" title=""><img class="working__graph-img working__graph-img--0" working-graph-js src="./img/img-graph-working-0.png" alt="" title=""><img class="working__graph-img working__graph-img--1" working-graph-js src="./img/img-graph-working-1.png" alt="" title=""><img class="working__graph-img working__graph-img--2" working-graph-js src="./img/img-graph-working-2.png" alt="" title=""><img class="working__graph-img working__graph-img--3" working-graph-js src="./img/img-graph-working-3.png" alt="" title=""></div>
                 <p><span>Oś pionowa</span> to otwarcie przepustnicy, zaś <span>oś pozioma</span> pokazuje, <br>jak mocno wciśnięty jest pedał gazu.</p>
                 <div class="working__mobile">
                   <div class="working__block working__block-0">
